--- a/changelog
+++ b/changelog
@@ -1,3 +1,17 @@
+Version 2.2
+-----------
+Apps: calibre, beekeeper, Tuba, Cura, kitty,
+Apps: Signal, Prusa Slicer, Gradience, cavalier,
+Games: (Steam) Marvel's Midnight Suns,
+Games: (Steam) Lost Eidolons, (Steam) WarTales,
+Games: (Steam) Immortal Realms Vampire Wars,
+Games: (Steam) The Sandwalkers (Demo),
+Games: (Steam) War of the Overworld,
+Games: (Steam) Wolcen: Lord of Mayhem,
+Games: (Steam) The Last Spell,
+Games: (Steam) Spellforce: Conquest of Eo,
+Games: (Steam) Monster Train,
+
 Version 2.1
 -----------
 Apps: Aegisub, Cura, GPU Screen Recorder, 
